# SwarmMalackathon25

./: .env.example  Dockerfile  README.md  RECAPTCHA_README.md  app.py  config.py  docker-compose.yaml  gunicorn.conf.py  main.py  ords_utils.py  pyproject.toml  recaptcha_backend.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
assets/: accessibility.css  components.css  custom.js  layout.css  recaptcha.js  style.css
src/: __init__.py
src/callbacks/: __init__.py  interactions.py
src/components/: __init__.py  charts.py  metrics_cards.py  tables.py
src/data/: __init__.py  data_loader.py  ords_client.py
src/layouts/: __init__.py  diagnostics.py  gender_analysis.py  header.py  insights.py  main_metrics.py  severity.py  weight_stay.py
src/utils/: __init__.py  config.py  helpers.py  themes.py
